[gd_scene load_steps=3 format=3 uid="uid://dafa27lf0gfjw"]

[ext_resource type="Script" uid="uid://b7obihj6uhd1o" path="res://scripts/UI/note_viewer.gd" id="1_rte7k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rte7k"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[node name="NoteViewer" type="CanvasLayer"]
layer = 10
script = ExtResource("1_rte7k")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7058824)

[node name="NotePanel" type="Panel" parent="."]
custom_minimum_size = Vector2(160, 140)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -65.0
offset_right = 70.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rte7k")

[node name="TextureRect" type="TextureRect" parent="NotePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="BtnPrevious" type="Button" parent="NotePanel"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 0
offset_left = 8.0
offset_top = 120.0
offset_right = 26.0
offset_bottom = 151.0
scale = Vector2(0.5, 0.4)
text = "<"

[node name="BtnNext" type="Button" parent="NotePanel"]
layout_mode = 0
offset_left = 140.0
offset_top = 120.0
offset_right = 158.0
offset_bottom = 151.0
scale = Vector2(0.5, 0.4)
theme_override_font_sizes/font_size = 16
text = ">"

[node name="BtnClose" type="Button" parent="NotePanel"]
layout_mode = 0
offset_left = 145.0
offset_top = 5.0
offset_right = 163.0
offset_bottom = 36.0
scale = Vector2(0.5, 0.4)
text = "X"
