# note_viewer.gd
# Sistema de visualizaci√≥n de notas con soporte para m√∫ltiples p√°ginas
extends CanvasLayer

# Referencias a nodos
@onready var background_overlay: ColorRect = $BackgroundOverlay
@onready var note_panel: Panel = $NotePanel
@onready var texture_rect: TextureRect = $NotePanel/TextureRect
@onready var btn_prev: Button = $NotePanel/BtnPrevious
@onready var btn_next: Button = $NotePanel/BtnNext
@onready var btn_close: Button = $NotePanel/BtnClose

# Estado interno
var note_textures: Array[Texture2D] = []
var current_page: int = 0
var is_note_open: bool = false

func _ready() -> void:
	# Asegurar que funcione mientras el juego est√° pausado
	process_mode = Node.PROCESS_MODE_ALWAYS
	
	# Conectar se√±ales de los botones
	btn_prev.pressed.connect(_on_previous_page)
	btn_next.pressed.connect(_on_next_page)
	btn_close.pressed.connect(_on_close_note)
	
	# Ocultar al inicio
	hide()
	print("‚úÖ NoteViewer inicializado")

func _input(event: InputEvent) -> void:
	# Cerrar con ESC solo si la nota est√° abierta
	if event.is_action_pressed("pausa") and is_note_open:
		_on_close_note()
		get_viewport().set_input_as_handled()

# Muestra la nota con las texturas proporcionadas
func show_note(textures: Array[Texture2D]) -> void:
	if textures.is_empty():
		push_error("‚ùå No se proporcionaron texturas para la nota")
		return
	
	print("üìñ Mostrando nota con ", textures.size(), " p√°gina(s)")
	
	note_textures = textures
	current_page = 0
	is_note_open = true
	
	# Actualizar visualizaci√≥n
	_update_page()
	_update_navigation_buttons()
	
	# Pausar el juego
	get_tree().paused = true
	show()

# Cierra la nota y reanuda el juego
func _on_close_note() -> void:
	print("üìï Cerrando nota")
	is_note_open = false
	get_tree().paused = false
	hide()

# Navega a la p√°gina anterior
func _on_previous_page() -> void:
	if current_page > 0:
		current_page -= 1
		_update_page()
		_update_navigation_buttons()

# Navega a la p√°gina siguiente
func _on_next_page() -> void:
	if current_page < note_textures.size() - 1:
		current_page += 1
		_update_page()
		_update_navigation_buttons()

# Actualiza la textura mostrada seg√∫n la p√°gina actual
func _update_page() -> void:
	if current_page < note_textures.size():
		texture_rect.texture = note_textures[current_page]
		print("üìÑ Mostrando p√°gina ", current_page + 1, "/", note_textures.size())

# Muestra/oculta los botones de navegaci√≥n seg√∫n la p√°gina actual
func _update_navigation_buttons() -> void:
	# Solo mostrar botones si hay m√°s de una p√°gina
	if note_textures.size() <= 1:
		btn_prev.visible = false
		btn_next.visible = false
		return
	
	# Mostrar/ocultar seg√∫n la p√°gina actual
	btn_prev.visible = current_page > 0
	btn_next.visible = current_page < note_textures.size() - 1
